# SirSim

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini  precompiled.h
core/: layer.h  sirsim.cpp  sirsim.h
core/graphics/: shader.cpp  shader.h
shaders/: basicf.glsl  basicv.glsl  gridf.glsl  gridv.glsl
sirsim/: main.cpp  scene2d.cpp  scene2d.h  sirsim.cpp  sirsim.h
sirsim/simulation/: basic_navierstokes.cpp  basic_navierstokes.h
sirsim/widgets/: scene2d.cpp  scene2d.h
